--- a/app/styles/framework/helpers/_size.scss
+++ b/app/styles/framework/helpers/_size.scss
@@ -10,8 +10,7 @@
             flex-grow: 1;
             flex-basis: auto;
             max-width: 100%;
-            min-width: 0%;
-            width: auto;
+            width: 0%;
         }
 
         @for $grid from 0 through $columns {
