--- a/app/styles/framework/helpers/_spacing.scss
+++ b/app/styles/framework/helpers/_spacing.scss
@@ -6,6 +6,7 @@
     $attrs: ( padding, margin ),    // Values: margin, padding
     $responsive: $responsive,       // Values: false, both, up, only
     $steps: 5,                      // Value must be an integer
+    $fraction: 2,
     $directions: (                  // Values: top, bottom, left, right, top-bottom, left-right
         top,
         bottom,
@@ -20,30 +21,31 @@
 
         @include breakpoints( $responsive ) {
 
-            @include create-helpers-spacing( $attrs, $steps, $directions, $break );
+            @include create-helpers-spacing( $attrs, $steps, $directions, $fraction, $break );
         }
 
     // If not responsive, just run the general loop
     } @else {
 
-        @include create-helpers-spacing( $attrs, $steps, $directions, $break: '' );
+        @include create-helpers-spacing( $attrs, $steps, $directions, $fraction, $break: '' );
     }
 }
 
-@mixin create-helpers-spacing( $attrs, $steps, $directions, $break ) {
+@mixin create-helpers-spacing( $attrs, $steps, $directions, $fraction, $break ) {
 
     // Create helpers for each step defined
-    @for $step from 0 through $steps {
+    @for $step from 0 through $steps * $fraction {
 
         // Iterate through each attribute (padding, margin)
         @each $attr in $attrs {
 
             // Get the first character of the attribute for our helper classes (ie. 'p' from 'padding')
             $attrClass: str-slice($attr, 1, 1);
+            $classStep: str-replace(inspect($step / $fraction), '.');
 
             // ie. .p-1@m
-            .#{ $attrClass }-#{ $step }#{ $break }.#{ $attrClass }-#{ $step }#{ $break } {
-                #{ $attr }: #{ $step }rem; // ie. padding: 1rem;
+            .#{ $attrClass }-#{ $classStep }#{ $break }.#{ $attrClass }-#{ $classStep }#{ $break } {
+                #{ $attr }: #{ $step / $fraction }rem; // ie. padding: 1rem;
             }
 
             // Iterate through each direction
@@ -59,8 +61,8 @@
                     @if $step > 0 {
 
                         // ie. .p-1-0@m
-                        .#{ $attrClass }-#{ $step }-0#{ $break }.#{ $attrClass }-#{ $step }-0#{ $break } {
-                            #{ $attr }: #{ $step }rem 0; // ie. padding: 1rem 0
+                        .#{ $attrClass }-#{ $classStep }-0#{ $break }.#{ $attrClass }-#{ $classStep }-0#{ $break } {
+                            #{ $attr }: #{ $step / $fraction }rem 0; // ie. padding: 1rem 0
                         }
                     }
 
@@ -71,8 +73,8 @@
                     @if $step > 0 {
 
                         // ie. .p-0-1@em
-                        .#{ $attrClass }-0-#{ $step }#{ $break }.#{ $attrClass }-0-#{ $step }#{ $break } {
-                            #{ $attr }: 0 #{ $step }rem; // ie. padding: 0 1rem
+                        .#{ $attrClass }-0-#{ $classStep }#{ $break }.#{ $attrClass }-0-#{ $classStep }#{ $break } {
+                            #{ $attr }: 0 #{ $step / $fraction }rem; // ie. padding: 0 1rem
                         }
                     }
 
@@ -80,11 +82,13 @@
                 } @else {
 
                     // ie. .p-l-1@m
-                    .#{ $attrClass }-#{ $dir }-#{ $step }#{ $break }.#{ $attrClass }-#{ $dir }-#{ $step }#{ $break } {
-                        #{ $attr }-#{ $direction }: #{ $step }rem; // ie. padding-left: 1rem
+                    .#{ $attrClass }-#{ $dir }-#{ $classStep }#{ $break }.#{ $attrClass }-#{ $dir }-#{ $classStep }#{ $break } {
+                        #{ $attr }-#{ $direction }: #{ $step / $fraction }rem; // ie. padding-left: 1rem
                     }
                 }
             }
         }
     }
 }
+
+
